[package]
name = "daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
sd-notify = ["dep:sd-notify", "core/sd-notify"]
# Async runtime support - enables tokio-based async I/O for daemon operations
async = ["dep:tokio", "core/async"]
# Hybrid async listener: tokio accept loop dispatching sync workers via
# spawn_blocking. Skeleton path tracked under issue #1935; opt-in at build time
# and not yet wired as the default. This is also the landing flag for the
# DASYNC rollout - the long-form rationale lives in
# `docs/design/daemon-async-accept-sync-workers.md` and the concrete
# implementation steps in `docs/design/daemon-tokio-async-listener-impl.md`.
async-daemon = ["dep:tokio"]
# EXPERIMENTAL (ASY-3, default-off): lets the hybrid async listener hand
# accepted connections to the tokio transfer driver. Implies `async-daemon`
# (tokio accept loop) and forwards `core/tokio-transfer` so the per-connection
# server body can run on the runtime. Default-off until the ASY-12 gate. See
# docs/design/asy-2-tokio-runtime-feature.md section 5.
tokio-transfer = ["async-daemon", "core/tokio-transfer"]
# Concurrent session tracking - enables efficient shared state for multi-session daemons
concurrent-sessions = ["dep:dashmap"]
# Extended attributes (xattr) preservation during transfers
xattr = ["core/xattr"]
# Structured logging instrumentation for daemon diagnostics
tracing = ["dep:tracing", "core/tracing"]
# ACL (Access Control Lists) support on Unix systems
acl = ["core/acl", "metadata/acl"]
# Filename charset transcoding via the module `charset =` directive (iconv).
iconv = ["core/iconv", "protocol/iconv"]
# Seccomp BPF syscall allowlist applied to the post-fork worker on Linux,
# layered above the SEC-1.p Landlock LSM defense. Opt-in until the 14-day bake
# in `docs/design/lsm-seccomp-allowlist.md` completes. No-op on non-Linux
# (the dependency is `cfg(target_os = "linux")`-gated).
daemon-seccomp = ["dep:seccompiler"]
# Opt-in (default-off): let the daemon-sender's socket write side dispatch
# io_uring `IORING_OP_SEND_ZC` when the client sends `--zero-copy` and the
# running kernel advertises the opcode. Forwards the `iouring-send-zc` group
# (which pulls `io_uring`) into `fast_io`. Default builds keep io_uring OUT of
# the daemon's dependency graph, so `socket_writer_from_fd_zero_copy` resolves
# to the fallback that degrades `--zero-copy` to the plain socket write path -
# byte- and behavior-identical to the pre-feature daemon. On non-Linux the
# `io-uring` crate dependency is target-gated, so enabling this feature there is
# a no-op that still degrades to the plain writer. See
# docs/design/iouring-send-zc.md for the buffer-lifetime contract.
daemon-zero-copy = ["fast_io/iouring-send-zc"]
# macOS-only, default-off: source accepted connections in the daemon accept
# loop from a `kqueue(2)` `EVFILT_READ` readiness wait instead of the portable
# non-blocking-accept-plus-50ms-sleep busy-poll. Event-driven (parks in the
# kernel until a connection arrives or the signal-check timeout elapses) rather
# than busy-waiting, dropping first-connection latency on a quiet daemon from up
# to 50ms to a syscall round-trip. Falls back to the portable engines if kqueue
# setup fails, so it never breaks connection service. Off by default: the
# default build uses the portable accept path unchanged. No-op on non-macOS.
macos-kqueue = []

[dependencies]
clap = { workspace = true }
base64 = { workspace = true }
dns-lookup = "3.0"
compress = { path = "../compress" }
core = { path = "../core", default-features = false }
metadata = { path = "../metadata", default-features = false }
platform = { path = "../platform" }
protocol = { path = "../protocol" }
logging = { path = "../logging" }
logging-sink = { path = "../logging-sink" }
fs2 = "0.4"
socket2 = { workspace = true, features = ["all"] }
tempfile = { workspace = true }
tokio = { workspace = true, optional = true, features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "time", "macros"] }
dashmap = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
checksums = { path = "../checksums" }
libc = { workspace = true }

# fast_io carries the Landlock LSM defense-in-depth helper (SEC-1.p). On
# non-Linux targets the stub module compiles with the same public surface
# and every call short-circuits to `Unavailable`, so the wire-in at
# `module_access/transfer.rs` does not need `#[cfg]` branching. The
# `landlock` feature is forwarded only on Linux where the crate has a real
# dependency to enable. Default features stay off so we do not pull
# io_uring / iocp into the daemon's runtime dependency graph.
[target.'cfg(not(target_os = "linux"))'.dependencies]
fast_io = { path = "../fast_io", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { version = "0.5.0", optional = true }
fast_io = { path = "../fast_io", default-features = false, features = ["landlock"] }
# Seccomp BPF filter compiler. Linux-only; pulled in solely when the
# `daemon-seccomp` feature is enabled. AWS rust-vmm maintained, safe-wrapper
# over `seccomp(2)` / BPF program assembly.
seccompiler = { version = "0.5", optional = true }
# `caps` is a safe wrapper around prctl(PR_CAPBSET_DROP) / capset(2) used by
# the LSM-CAP defense-in-depth helpers in `daemon/sections/capabilities.rs`.
# Audit-clean per the unsafe-code policy: the crate's public API contains no
# unsafe blocks the daemon needs to opt into.
caps = "0.5"
# `process` enables nix::sys::prctl for PR_SET_NO_NEW_PRIVS startup hardening.
nix = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }
windows = { workspace = true, features = [
    "Win32_Foundation",
] }

[dev-dependencies]
bandwidth = { path = "../bandwidth", features = ["test-support"] }
criterion = { workspace = true }
filetime = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dev-dependencies]
xattr = { workspace = true }
exacl = { workspace = true }

# fast_io BgidAllocator backs the bgid_long_running_stress test. Linux-only:
# the io_uring backend (and the bgid namespace it manages) only ships there.
[target.'cfg(target_os = "linux")'.dev-dependencies]
fast_io = { path = "../fast_io", default-features = false, features = ["io_uring"] }
# Seccompiler reused by `tests/seccomp_worker_filter.rs` for the kernel
# install / SIGSYS-on-block tests. Mirrors the optional production dep so
# integration tests can build the filter independently of the production
# allowlist.
seccompiler = "0.5"

[[bench]]
name = "daemon_benchmark"
harness = false
