[package]
name = "rsync-embedding"
version.workspace = true
edition = "2024"
authors = ["Ofer Chen <skewers.irises.3b@icloud.com>"]
license = "GPL-3.0-or-later"
description = "Programmatic entry points for the oc-rsync client and daemon"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rsync-cli = { path = "../cli" }
rsync-daemon = { path = "../daemon" }
rsync-core = { path = "../core" }
