[package]
name = "embedding"
version.workspace = true
edition = "2024"
authors = ["Ofer Chen <skewers.irises.3b@icloud.com>"]
license = "GPL-3.0-or-later"
description = "Programmatic entry points for the oc-rsync client and daemon"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cli = { path = "../cli" }
daemon = { path = "../daemon" }
core = { path = "../core" }
