[package]
name = "engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Transfer engine components for the Rust rsync implementation"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
metadata = { path = "../metadata", default-features = false }
filters = { path = "../filters" }
compress = { path = "../compress" }
protocol = { path = "../protocol" }
bandwidth = { path = "../bandwidth" }
logging = { path = "../logging" }
signature = { path = "../signature" }
matching = { path = "../match" }
batch = { path = "../batch" }
fast_io = { path = "../fast_io", default-features = false }
thiserror = "2.0"
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = "0.3"
tracing = { workspace = true, optional = true }
globset = "0.4"
jwalk = { workspace = true }
rustc-hash = { workspace = true }
rustix = { version = "1.1", features = ["fs", "process"] }
tokio = { workspace = true, optional = true, features = ["fs", "io-util", "sync", "rt"] }
filetime = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-fs = { path = "../apple-fs" }

[target.'cfg(not(windows))'.dependencies]
checksums = { path = "../checksums" }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

# libc is needed for O_NOATIME (Linux), clonefile (macOS), posix_fadvise, syncfs
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["zstd", "lz4", "xattr", "lazy-metadata"]

# ============================================================================
# Compression Features
# ============================================================================
zstd = ["compress/zstd", "protocol/zstd", "batch/zstd"]
lz4 = ["compress/lz4", "protocol/lz4"]
zlib-ng = ["compress/zlib-ng", "protocol/zlib-ng"]

# ============================================================================
# Metadata Features
# ============================================================================
xattr = ["metadata/xattr"]
acl = ["metadata/acl"]

# ============================================================================
# Performance Optimization Features
# ============================================================================

# Buffer pool is always compiled (runtime-selectable via use_buffer_pool flag).
# No feature gate needed -- both pool and direct-alloc paths are always available.

# Lazy metadata - defers stat() calls until metadata is needed
# Benefits: Reduces syscall overhead for file list operations
# Trade-offs: None (transparent optimization)
lazy-metadata = []

# Parallel file operations - enables rayon-based parallelism for large transfers
# Benefits: Multi-threaded file processing on multi-core systems
# Trade-offs: Minimal overhead on single-core systems
parallel = []

# Multi-producer work queue - enables Clone for WorkQueueSender
# Benefits: Multiple producer threads can feed the concurrent delta pipeline
# Trade-offs: Relaxes the single-producer compile-time invariant
multi-producer = []

# ============================================================================
# Runtime Features
# ============================================================================

# Async runtime support - enables tokio-based async I/O for file operations
async = ["dep:tokio", "dep:filetime"]

# ============================================================================
# Debugging Features
# ============================================================================

# Structured logging instrumentation for performance analysis
tracing = ["dep:tracing"]

[dev-dependencies]
filetime = "0.2"
tempfile = "3.15"
test-support = { path = "../test-support" }
bandwidth = { path = "../bandwidth", features = ["test-support"] }
apple-fs = { path = "../apple-fs" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = "1.8"

[target.'cfg(unix)'.dev-dependencies]
xattr = "1.6"
libc = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "optimizations_benchmark"
harness = false

[[bench]]
name = "parallel_checksum"
harness = false

[[bench]]
name = "delta_transfer_benchmark"
harness = false

[[bench]]
name = "local_copy_bench"
harness = false

[[bench]]
name = "buffer_pool_benchmark"
harness = false

[[bench]]
name = "drain_parallel_benchmark"
harness = false

[[bench]]
name = "buffer_pool_contention"
harness = false

[[bench]]
name = "reorder_buffer_scaling"
harness = false
