[package]
name = "engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Transfer engine components for the Rust rsync implementation"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
metadata = { path = "../metadata", default-features = false }
filters = { path = "../filters" }
compress = { path = "../compress" }
protocol = { path = "../protocol" }
bandwidth = { path = "../bandwidth" }
logging = { path = "../logging" }
signature = { path = "../signature" }
matching = { path = "../matching" }
batch = { path = "../batch" }
fast_io = { path = "../fast_io", default-features = false }
thiserror = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
tracing = { workspace = true, optional = true }
globset = "0.4"
jwalk = { workspace = true }
rustc-hash = { workspace = true }
rustix = { workspace = true, features = ["fs", "process"] }
tempfile = { workspace = true }
tokio = { workspace = true, optional = true, features = ["fs", "io-util", "sync", "rt"] }
filetime = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-fs = { path = "../apple-fs" }

[target.'cfg(not(windows))'.dependencies]
checksums = { path = "../checksums" }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

# libc is needed for O_NOATIME (Linux), clonefile (macOS), posix_fadvise, syncfs
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
default = ["zstd", "lz4", "xattr", "lazy-metadata"]

# ============================================================================
# Compression Features
# ============================================================================
zstd = ["compress/zstd", "protocol/zstd", "batch/zstd"]
lz4 = ["compress/lz4", "protocol/lz4"]
zlib-ng = ["compress/zlib-ng", "protocol/zlib-ng"]

# ============================================================================
# Metadata Features
# ============================================================================
xattr = ["metadata/xattr"]
acl = ["metadata/acl"]

# ============================================================================
# Performance Optimization Features
# ============================================================================

# Buffer pool is always compiled (runtime-selectable via use_buffer_pool flag).
# No feature gate needed -- both pool and direct-alloc paths are always available.

# Lazy metadata - defers stat() calls until metadata is needed
# Benefits: Reduces syscall overhead for file list operations
# Trade-offs: None (transparent optimization)
lazy-metadata = []

# Parallel file operations - enables rayon-based parallelism for large transfers
# Benefits: Multi-threaded file processing on multi-core systems
# Trade-offs: Minimal overhead on single-core systems
parallel = []

# Parallel receive-side delta apply (#1368) - scaffolds the per-file rayon
# fanout for checksum verification while keeping the per-file destination
# write serial. Default off so production receivers continue to use the
# sequential apply loop. Opt-in for benchmarking and the phased rollout
# described in `docs/design/parallel-receive-delta-application.md`.
parallel-receive-delta = []

# Multi-producer work queue - enables Clone for WorkQueueSender
# Benefits: Multiple producer threads can feed the concurrent delta pipeline
# Trade-offs: Relaxes the single-producer compile-time invariant
multi-producer = []

# Spill payload compression (#2336) - reserves the SpillCompression::Zstd
# variant on SpillPolicy. The codec wiring lands separately; this flag only
# guards the public enum variant so default builds stay free of any new
# dependency.
spill-compression = []

# Per-thread buffer slab (#1271, #1370) - replaces the single-slot thread-local
# cache in front of BufferPool with a depth-bounded LIFO slab per thread.
# Benefits: Removes central-queue cursor traffic on every return for workers
# that hold multiple buffers; cross-thread returns still fall through to the
# central overflow queue. Bounded per-thread byte cap (default 1 MiB).
# Trade-offs: Higher steady-state idle memory (N threads * byte_cap) vs the
# single-slot path; only beneficial above ~32 worker threads per pool.
thread-slab-pool = []

# ============================================================================
# Runtime Features
# ============================================================================

# Async runtime support - enables tokio-based async I/O for file operations
async = ["dep:tokio", "dep:filetime"]

# ============================================================================
# Debugging Features
# ============================================================================

# Structured logging instrumentation for performance analysis
tracing = ["dep:tracing"]

[dev-dependencies]
filetime = { workspace = true }
tempfile = { workspace = true }
test-support = { path = "../test-support" }
bandwidth = { path = "../bandwidth", features = ["test-support"] }
apple-fs = { path = "../apple-fs" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
xattr = "1.6"
libc = { workspace = true }
criterion = { workspace = true }
dashmap = { workspace = true }

[[bench]]
name = "optimizations_benchmark"
harness = false

[[bench]]
name = "parallel_checksum"
harness = false

[[bench]]
name = "delta_transfer_benchmark"
harness = false

[[bench]]
name = "local_copy_bench"
harness = false

[[bench]]
name = "buffer_pool_benchmark"
harness = false

[[bench]]
name = "drain_parallel_benchmark"
harness = false

[[bench]]
name = "buffer_pool_contention"
harness = false

[[bench]]
name = "adaptive_bufferpool"
harness = false

[[bench]]
name = "reorder_buffer_scaling"
harness = false

[[bench]]
name = "reorder_buffer_cache"
harness = false

[[bench]]
name = "reorderbuffer_memory"
harness = false

[[bench]]
name = "parallel_dispatch_overhead"
harness = false

[[bench]]
name = "sp_vs_mp_workqueue"
harness = false

[[bench]]
name = "drain_parallel_alternatives"
harness = false

[[bench]]
name = "delete_plan_map_contention"
harness = false

[[bench]]
name = "delete_plan_compute"
harness = false

[[bench]]
name = "delete_emitter_unlink"
harness = false

[[bench]]
name = "delete_end_to_end"
harness = false

[[bench]]
name = "per_op_thresholds"
harness = false

[[bench]]
name = "parallel_receive_delta_perf"
harness = false
required-features = ["parallel-receive-delta"]
