[package]
name = "engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Transfer engine components for the Rust rsync implementation"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
metadata = { path = "../metadata", default-features = false }
filters = { path = "../filters" }
compress = { path = "../compress" }
protocol = { path = "../protocol" }
bandwidth = { path = "../bandwidth" }
logging = { path = "../logging" }
signature = { path = "../signature" }
matching = { path = "../matching" }
batch = { path = "../batch" }
fast_io = { path = "../fast_io", default-features = false }
thiserror = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true, optional = true }
globset = { workspace = true }
jwalk = { workspace = true }
rustc-hash = { workspace = true }
rustix = { workspace = true, features = ["fs", "param", "process"] }
tempfile = { workspace = true }
tokio = { workspace = true, optional = true, features = ["fs", "io-util", "sync", "rt"] }
filetime = { workspace = true }
zstd = { version = "0.13", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-fs = { path = "../apple-fs" }

[target.'cfg(not(windows))'.dependencies]
checksums = { path = "../checksums" }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem"] }

# libc is needed for O_NOATIME (Linux), clonefile (macOS), posix_fadvise, syncfs
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
# Parallel receive-side delta apply is unconditionally compiled (PFF-7).
default = ["zstd", "lz4", "xattr", "lazy-metadata"]

# ============================================================================
# Compression Features
# ============================================================================
zstd = ["compress/zstd", "protocol/zstd", "batch/zstd"]
lz4 = ["compress/lz4", "protocol/lz4"]
zlib-ng = ["compress/zlib-ng", "protocol/zlib-ng"]

# ============================================================================
# Metadata Features
# ============================================================================
xattr = ["metadata/xattr"]
acl = ["metadata/acl"]

# ============================================================================
# Character Encoding Features
# ============================================================================

# Filename character set conversion (`--iconv=LOCAL,REMOTE`). Forwards to
# `protocol/iconv` so the engine's local-copy executor can use real
# `encoding_rs` conversions. Without this feature, the executor still
# compiles but a non-UTF-8 `FilenameConverter` cannot be constructed, so
# `--iconv` falls back to pass-through bytes (matching the engine-only
# build profile used by some test suites). The default workspace build
# turns this on via `core` -> `protocol/iconv`.
iconv = ["protocol/iconv"]

# ============================================================================
# Performance Optimization Features
# ============================================================================

# Buffer pool is always compiled (runtime-selectable via use_buffer_pool flag).
# No feature gate needed -- both pool and direct-alloc paths are always available.

# Lazy metadata - defers stat() calls until metadata is needed
# Benefits: Reduces syscall overhead for file list operations
# Trade-offs: None (transparent optimization)
lazy-metadata = []

# Parallel file operations - enables rayon-based parallelism for large transfers
# Benefits: Multi-threaded file processing on multi-core systems
# Trade-offs: Minimal overhead on single-core systems
parallel = []

# DEL-2.c: parallel DeleteEmitter consumer behind a Cargo flag. Gates the
# `delete::parallel_consumer` module that wraps `CohortBatcher` (DEL-2.b) and
# the DEL-2.a `ReorderBuffer` with a Condvar-driven consumer thread that
# dispatches each cohort's ops on rayon while preserving the strict
# cross-cohort wire order from DEL-1.a. Off by default; DEL-2.d migrates the
# receiver call site.
parallel-delete-consumer = []

# DG-3.e: high-iteration stress test for `concurrent_register_and_dispatch`
# under the DG-3 SlotData/BarrierState split (#2694). Gated behind its own
# feature so the 1000-thread x 10K-iter cycle does not run in every PR's
# nextest cell; a dedicated non-required CI cell runs it on Linux + Windows
# + macOS. See `project_concurrent_dispatch_test_flake` and
# `project_slothandle_decrementguard_release_race` memory notes for the
# race the stress targets.
dg-stress = []

# Multi-producer work queue - enables Clone for WorkQueueSender
# Benefits: Multiple producer threads can feed the concurrent delta pipeline
# Trade-offs: Relaxes the single-producer compile-time invariant
multi-producer = []

# Spill payload compression (#2336, #2341) - exposes the SpillCompression::Zstd
# variant on SpillPolicy and wires the zstd codec into the spill write/read
# path. Default builds stay free of the zstd dependency, and the on-disk spill
# format gains a single leading tag byte (0x00 raw / 0x01 zstd) per record so
# the reader can dispatch without ambiguity.
spill-compression = ["dep:zstd"]

# EXPERIMENTAL: SMR-3a Option 1 (#2288) - forward to `fast_io/mmap-free-basis`
# so the basis-read dispatch in `concurrent_delta::strategy` skips the mmap
# branch and forces io_uring (or a buffered fallback) for every basis read.
# Default off; do not enable until SMR-1 hardware numbers validate Option 1.
# See `docs/design/mmap-vs-sqpoll-conflict-resolution.md` for the rationale.
mmap-free-basis = ["fast_io/mmap-free-basis"]

# Per-thread buffer slab (#1271, #1370) - replaces the single-slot thread-local
# cache in front of BufferPool with a depth-bounded LIFO slab per thread.
# Benefits: Removes central-queue cursor traffic on every return for workers
# that hold multiple buffers; cross-thread returns still fall through to the
# central overflow queue. Bounded per-thread byte cap (default 1 MiB).
# Trade-offs: Higher steady-state idle memory (N threads * byte_cap) vs the
# single-slot path; only beneficial above ~32 worker threads per pool.
thread-slab-pool = []

# Opt-in passthrough for the sender/reader io_uring slurp prototype
# (IUD-6 #2366). Activates `fast_io/iouring-data-reads` and the single
# basis-file dispatch in `concurrent_delta::strategy`. Default off so
# production builds remain byte-identical to today.
iouring-data-reads = ["fast_io/iouring-data-reads"]

# Opt-in passthrough for the receiver io_uring write path. Activates
# `fast_io/iouring-data-writes` so engine cfg-gated code can dispatch
# large file writes through io_uring. Default off so production builds
# remain byte-identical to today.
iouring-data-writes = ["fast_io/iouring-data-writes"]

# ============================================================================
# Runtime Features
# ============================================================================

# Async runtime support - enables tokio-based async I/O for file operations
async = ["dep:tokio"]

# ============================================================================
# Debugging Features
# ============================================================================

# Structured logging instrumentation for performance analysis
tracing = ["dep:tracing"]

[dev-dependencies]
tempfile = { workspace = true }
test-support = { path = "../test-support" }
bandwidth = { path = "../bandwidth", features = ["test-support"] }
apple-fs = { path = "../apple-fs" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
xattr = { workspace = true }
libc = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
zstd = "0.13"

[[bench]]
name = "optimizations_benchmark"
harness = false

[[bench]]
name = "parallel_checksum"
harness = false

[[bench]]
name = "delta_transfer_benchmark"
harness = false

[[bench]]
name = "local_copy_bench"
harness = false

[[bench]]
name = "buffer_pool_benchmark"
harness = false

[[bench]]
name = "drain_parallel_benchmark"
harness = false

[[bench]]
name = "buffer_pool_contention"
harness = false

[[bench]]
name = "adaptive_bufferpool"
harness = false

[[bench]]
name = "reorder_buffer_scaling"
harness = false

[[bench]]
name = "reorder_buffer_cache"
harness = false

[[bench]]
name = "reorderbuffer_memory"
harness = false

[[bench]]
name = "parallel_dispatch_overhead"
harness = false

[[bench]]
name = "sp_vs_mp_workqueue"
harness = false

[[bench]]
name = "drain_parallel_alternatives"
harness = false

[[bench]]
name = "delete_plan_map_contention"
harness = false

[[bench]]
name = "delete_plan_compute"
harness = false

[[bench]]
name = "delete_emitter_unlink"
harness = false

[[bench]]
name = "delete_end_to_end"
harness = false

[[bench]]
name = "per_op_thresholds"
harness = false

[[bench]]
name = "parallel_receive_delta_perf"
harness = false

[[bench]]
name = "parallel_verify_chunk"
harness = false

[[bench]]
name = "br_3j_f_dashmap_cores_vs_throughput"
harness = false

[[bench]]
name = "dmb_a_dashmap_delete_bench"
harness = false

[[bench]]
name = "spill_policy_perf"
harness = false
required-features = ["spill-compression"]
