[package]
name = "fast_io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance I/O abstractions for rsync"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rayon = { workspace = true }
logging = { path = "../logging" }
thiserror = "2.0"

# Cached sorting with Schwartzian transform
permutation = "0.4"

[target.'cfg(unix)'.dependencies]
# Memory-mapped I/O (unix-only; runtime fallback to buffered I/O)
memmap2 = "0.9"

# libc is used for copy_file_range syscall on Linux (always compiled, runtime detection)
libc = "0.2"

# rustix is used for statx syscall on Linux (always compiled, runtime detection)
rustix = { version = "1.1", features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Optional: io_uring support (Linux 5.6+)
io-uring = { version = "0.7", optional = true }

[features]
default = ["io_uring", "iocp"]

# ============================================================================
# I/O Optimization Features
# ============================================================================

# io_uring support for Linux 5.6+ with automatic fallback to standard I/O
# Requirements: Linux 5.6+ kernel (runtime detection and fallback)
# Benefits: 20-40% faster I/O via batched syscalls
# Trade-offs: Linux-only, adds dependency on io-uring crate
io_uring = ["dep:io-uring"]

# Windows I/O Completion Ports for async file reads and writes
# Requirements: Windows Vista+ (runtime detection and fallback)
# Benefits: Overlapped async I/O with completion port batching
# Trade-offs: Windows-only, adds complexity for async file operations
iocp = []

# copy_file_range: Always compiled with runtime detection (no longer a feature gate)
# The copy_file_range module is always available; it uses runtime detection on Linux
# and automatic fallback to read/write on other platforms or when syscall fails.
# This feature is kept as an empty alias for compatibility.
copy_file_range = []

# syscall_batch: Always compiled with runtime detection (no longer a feature gate)
# The syscall_batch module is always available; it uses runtime detection for
# batching threshold and platform-specific syscalls (statx on Linux).
# This feature is kept as an empty alias for compatibility.
syscall_batch = []

# vmsplice: Linux-only zero-copy file writer that moves a userspace buffer to a
# regular file via `vmsplice(2)` + `splice(2)`. Default off until benchmarks on
# the trigger workload (kernel < 5.6 or io_uring disabled, large literal tokens,
# splice-capable filesystem) justify promotion. See
# docs/design/splice-vmsplice-zero-copy.md.
vmsplice = []

[target.'cfg(windows)'.dependencies]
# CopyFileExW for Windows-optimized file copy with no-buffering support;
# Win32_Networking_WinSock added for WSARecv/WSASend in iocp::socket (#1928);
# Win32_System_Pipes added for CreatePipe-based tests of anonymous-handle
# rejection in writer_from_file (#1929).
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_System_Threading"] }

[target.'cfg(not(unix))'.dependencies]
filetime = "0.2"

[dev-dependencies]
tempfile = "3.15"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "io_optimizations"
harness = false

[[bench]]
name = "platform_copy"
harness = false

[[bench]]
name = "splice_pipe"
harness = false

# Linux-only bench: per-file vs shared io_uring ring on a 100K small-file
# workload. Gated by the OC_RSYNC_BENCH_IOURING_RING=1 env var because each
# iteration writes 100K files. See the file's module doc for the run recipe
# and what the numbers inform on task #2243.
[[bench]]
name = "iouring_per_file_vs_shared"
harness = false
required-features = ["io_uring"]

# Linux-only bench: io_uring SQPOLL vs regular submission vs std::fs on a
# 100K small-file workload. Gated by OC_RSYNC_BENCH_IOURING_RING=1 (for the
# io_uring groups) and OC_RSYNC_BENCH_IOURING_SQPOLL=1 (for the SQPOLL group)
# because SQPOLL needs CAP_SYS_NICE on pre-5.13 kernels. See the file's
# module doc for the run recipe and what the numbers inform on #1626 / #2243
# / #2045.
[[bench]]
name = "iouring_sqpoll_vs_regular"
harness = false
required-features = ["io_uring"]

# Windows-only bench: IOCP writer path (IocpDiskBatch) vs std::fs and
# BufWriter baselines across 4 KiB / 64 KiB / 1 MiB payloads. The bench
# file is cfg-gated to `target_os = "windows"` and the `iocp` feature; on
# every other host it compiles to a stub `main` that prints a skip line.
# See the file's module doc for the run recipe and what the numbers inform
# on #1899.
[[bench]]
name = "iocp_vs_stdio"
harness = false

# Cross-platform matched-workload bench: IOCP (Windows) vs io_uring (Linux)
# both compared against the same std::fs baseline so per-host throughput
# can be normalised before cross-host comparison. The bench file compiles
# on every platform but each kernel-async cell is cfg-gated to its host;
# every host also produces the std_baseline row as a common reference.
# Linux io_uring cells are env-gated via OC_RSYNC_BENCH_IOURING_RING=1
# (and OC_RSYNC_BENCH_IOURING_SQPOLL=1 for the sqpoll cell). See the
# file's module doc for the run recipe and what the numbers inform on
# #1868.
[[bench]]
name = "iocp_vs_iouring_matched"
harness = false

# Cross-platform synchronous copy-path bench: per-host throughput of the
# unified DefaultPlatformCopy dispatcher (FICLONE / copy_file_range on
# Linux, clonefile / fcopyfile on macOS, CopyFileExW / ReFS reflink on
# Windows) against the std::fs::copy baseline. The bench file compiles
# on every platform; the actual CopyMethod picked per cell is recorded
# on stderr at bench start so each host's Criterion report can be
# cross-referenced against the kernel path that ran. See the file's
# module doc for the run recipe and what the numbers inform on #1386.
[[bench]]
name = "platform_copy_gap"
harness = false
