[package]
name = "fast_io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance I/O abstractions for rsync"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rayon = { workspace = true }
logging = { path = "../logging" }
thiserror = { workspace = true }
tracing = { workspace = true }

# Cached sorting with Schwartzian transform
permutation = "0.4"

[target.'cfg(unix)'.dependencies]
# Memory-mapped I/O (unix-only; runtime fallback to buffered I/O)
memmap2 = "0.9"

# libc is used for copy_file_range syscall on Linux (always compiled, runtime detection)
libc = { workspace = true }

# rustix is used for statx syscall on Linux (always compiled, runtime detection)
rustix = { workspace = true, features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Optional: io_uring support (Linux 5.6+)
io-uring = { version = "0.7", optional = true }

[features]
default = ["io_uring", "iocp"]

# ============================================================================
# I/O Optimization Features
# ============================================================================

# io_uring support for Linux 5.6+ with automatic fallback to standard I/O
# Requirements: Linux 5.6+ kernel (runtime detection and fallback)
# Benefits: 20-40% faster I/O via batched syscalls
# Trade-offs: Linux-only, adds dependency on io-uring crate
io_uring = ["dep:io-uring"]

# Opt-in sender/reader-side io_uring slurp wrapper (IUD-6 #2366).
# Activates `IoUringFileReader` + `read_file_with_io_uring`, the basis-file
# fast path that submits `IORING_OP_READ_FIXED` against a `RegisteredBufferPool`
# slot. Disabled by default so production reads stay byte-identical to the
# stdlib path; consumers opt in through their own passthrough features
# (e.g. `engine/iouring-data-reads`).
iouring-data-reads = ["io_uring"]

# Windows I/O Completion Ports for async file reads and writes
# Requirements: Windows Vista+ (runtime detection and fallback)
# Benefits: Overlapped async I/O with completion port batching
# Trade-offs: Windows-only, adds complexity for async file operations
iocp = []

# Windows TransmitFile() zero-copy file-to-socket primitive (#2301)
# Requirements: Windows + iocp feature; sockets opened with WSA_FLAG_OVERLAPPED
# Benefits: Single kernel-mode DMA from page cache straight to NIC, no
#   user-space copy. Pairs with Linux sendfile(2) on the corresponding path.
# Trade-offs: Returns ERROR_NOT_SUPPORTED on SMB/DFS shares and encrypted
#   volumes; the caller must fall back to regular WSASend. See
#   docs/design/windows-transmitfile-zerocopy.md for the integration plan.
transmitfile = ["iocp"]

# copy_file_range: Always compiled with runtime detection (no longer a feature gate)
# The copy_file_range module is always available; it uses runtime detection on Linux
# and automatic fallback to read/write on other platforms or when syscall fails.
# This feature is kept as an empty alias for compatibility.
copy_file_range = []

# syscall_batch: Always compiled with runtime detection (no longer a feature gate)
# The syscall_batch module is always available; it uses runtime detection for
# batching threshold and platform-specific syscalls (statx on Linux).
# This feature is kept as an empty alias for compatibility.
syscall_batch = []

# vmsplice: Linux-only zero-copy file writer that moves a userspace buffer to a
# regular file via `vmsplice(2)` + `splice(2)`. Default off until benchmarks on
# the trigger workload (kernel < 5.6 or io_uring disabled, large literal tokens,
# splice-capable filesystem) justify promotion. See
# docs/design/splice-vmsplice-zero-copy.md.
vmsplice = []

# EXPERIMENTAL: SMR-3c - per-file adaptive basis-read dispatch with throughput
# feedback. Tracks rolling EWMA throughput of the mmap and io_uring backends
# per process and picks whichever has won lately. Falls back to the SMR-3b
# size-threshold heuristic when no samples are recorded yet. Default off
# pending hardware validation; promote only after the SMR-1 bench harness
# demonstrates a consistent win over the static threshold.
adaptive-basis-dispatch = []

[target.'cfg(windows)'.dependencies]
# CopyFileExW for Windows-optimized file copy with no-buffering support;
# Win32_Networking_WinSock added for WSARecv/WSASend in iocp::socket (#1928);
# Win32_System_Pipes added for CreatePipe-based tests of anonymous-handle
# rejection in writer_from_file (#1929).
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_System_Threading"] }

[target.'cfg(not(unix))'.dependencies]
filetime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "io_optimizations"
harness = false

[[bench]]
name = "platform_copy"
harness = false

[[bench]]
name = "splice_pipe"
harness = false

# Linux-only bench: per-file vs shared io_uring ring on a 100K small-file
# workload. Gated by the OC_RSYNC_BENCH_IOURING_RING=1 env var because each
# iteration writes 100K files. See the file's module doc for the run recipe
# and what the numbers inform on task #2243.
[[bench]]
name = "iouring_per_file_vs_shared"
harness = false
required-features = ["io_uring"]

# Linux-only bench: io_uring SQPOLL vs regular submission vs std::fs on a
# 100K small-file workload. Gated by OC_RSYNC_BENCH_IOURING_RING=1 (for the
# io_uring groups) and OC_RSYNC_BENCH_IOURING_SQPOLL=1 (for the SQPOLL group)
# because SQPOLL needs CAP_SYS_NICE on pre-5.13 kernels. See the file's
# module doc for the run recipe and what the numbers inform on #1626 / #2243
# / #2045.
[[bench]]
name = "iouring_sqpoll_vs_regular"
harness = false
required-features = ["io_uring"]

# Linux-only bench: mmap vs IORING_OP_READ_FIXED + SQPOLL on sequential
# basis-file reads at 4 MiB / 64 MiB / 1 GiB. Gated by
# OC_RSYNC_BENCH_IOURING_RING=1 and OC_RSYNC_BENCH_IOURING_SQPOLL=1 (the
# latter only for the read_fixed cells; the mmap cells need no gate),
# plus OC_RSYNC_BENCH_LARGE=1 to enable the 1 GiB rows. SMR-1 harness
# only; the hardware run that picks Option 1/2/3 from the design doc is
# tracked separately as SMR-2. See
# docs/design/mmap-vs-sqpoll-conflict-resolution.md (follow-up to #2158).
[[bench]]
name = "mmap_vs_read_fixed_basis"
harness = false

# Windows-only bench: IOCP writer path (IocpDiskBatch) vs std::fs and
# BufWriter baselines across 4 KiB / 64 KiB / 1 MiB payloads. The bench
# file is cfg-gated to `target_os = "windows"` and the `iocp` feature; on
# every other host it compiles to a stub `main` that prints a skip line.
# See the file's module doc for the run recipe and what the numbers inform
# on #1899.
[[bench]]
name = "iocp_vs_stdio"
harness = false

# Cross-platform matched-workload bench: IOCP (Windows) vs io_uring (Linux)
# both compared against the same std::fs baseline so per-host throughput
# can be normalised before cross-host comparison. The bench file compiles
# on every platform but each kernel-async cell is cfg-gated to its host;
# every host also produces the std_baseline row as a common reference.
# Linux io_uring cells are env-gated via OC_RSYNC_BENCH_IOURING_RING=1
# (and OC_RSYNC_BENCH_IOURING_SQPOLL=1 for the sqpoll cell). See the
# file's module doc for the run recipe and what the numbers inform on
# #1868.
[[bench]]
name = "iocp_vs_iouring_matched"
harness = false

# Cross-platform synchronous copy-path bench: per-host throughput of the
# unified DefaultPlatformCopy dispatcher (FICLONE / copy_file_range on
# Linux, clonefile / fcopyfile on macOS, CopyFileExW / ReFS reflink on
# Windows) against the std::fs::copy baseline. The bench file compiles
# on every platform; the actual CopyMethod picked per cell is recorded
# on stderr at bench start so each host's Criterion report can be
# cross-referenced against the kernel path that ran. See the file's
# module doc for the run recipe and what the numbers inform on #1386.
[[bench]]
name = "platform_copy_gap"
harness = false

# Linux-only bench: NVMe-heavy data-path stdlib write vs io_uring
# WRITE_FIXED on a 10 x 1 GiB workload. Quantifies the headroom the
# iouring-data-writes cutover (docs/design/iouring-receive-data-path.md)
# would close on a real NVMe mount. Gated by
# OC_RSYNC_BENCH_NVME_DATA_PATH=1; optionally OC_RSYNC_BENCH_NVME_PATH
# pins the scratch dir to a real NVMe mount instead of the default
# TempDir location. See the file's module doc for the run recipe and
# what the numbers inform on #2364.
[[bench]]
name = "nvme_data_path"
harness = false
